test_cases/tests/easy_ml/recursion.stderr
error[E0275]: overflow evaluating the requirement `for<'t> &'t Simd<_, {_: usize}>: Div<Simd<_, {_: usize}>>`
   --> tests/easy_ml/recursion.rs:8:23
    |
8   |     let determinant = easy_ml::linear_algebra::determinant(&matrix);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`$CRATE`)
    = note: required because of the requirements on the impl of `for<'t> NumericByValue<Simd<_, {_: usize}>, Simd<_, {_: usize}>>` for `&'t Simd<_, {_: usize}>`
    = note: required because of the requirements on the impl of `for<'t> NumericRef<Simd<_, {_: usize}>>` for `&'t Simd<_, {_: usize}>`
    = note: required because of the requirements on the impl of `for<'t> Div<Record<'_, Simd<_, {_: usize}>>>` for `&'t Record<'_, Simd<_, {_: usize}>>`
    = note: 125 redundant requirements hidden
    = note: required because of the requirements on the impl of `for<'a> NumericRef<Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Simd<_, {_: usize}>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>` for `&'a Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Record<'_, Simd<_, {_: usize}>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>`
note: required by a bound in `determinant`
   --> $CARGO/easy-ml-1.8.1/src/linear_algebra.rs
    |
    |     for<'a> &'a T: NumericRef<T>,
    |                    ^^^^^^^^^^^^^ required by this bound in `determinant`
